--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
  <!-- HEADER -->
     <header>
       <div class="app"><strong>Your</strong>App&trade;</div>
-      
+
       <!--- BELL ICON-->
 
       <svg version="1.1" id="bell" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
@@ -40,21 +40,21 @@
 
       <div class="dot"></div>
       <div class="divider"></div>
-      <img class="avatar" src="images/profilepic.jpg">
+      <img class="avatar" src="images/profilepic.jpg" alt="picture of Leslie">
       <div class="name">Leslie Gill</div>
     </header>
 
 
 
 
-    <!---NAV--->
+    <!--NAV-->
 
 
     <nav>
-      <img class="dashboard" src="icons/icon-dashboard.svg">
-      <img class="mem" src="icons/icon-members.svg">
-      <img class="visits" src="icons/icon-visits.svg">
-      <img class="settings" src="icons/icon-settings.svg">
+      <img class="dashboard" src="icons/icon-dashboard.svg" alt="dashboard icon">
+      <img class="mem" src="icons/icon-members.svg" alt="members icon">
+      <img class="visits" src="icons/icon-visits.svg" alt="visitor icon">
+      <img class="settings" src="icons/icon-settings.svg" alt="settings icon">
     </nav>
 
 
@@ -122,9 +122,7 @@
         <h2 class="card-header">Social Stats</h2>
         <div class="social-widgets">
           <div class="widget">
-            <?xml version="1.0" encoding="utf-8"?>
-            <!-- Generator: Adobe Illustrator 19.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-            <svg class="social-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+            <svg class="social-icon" version="1.1" id="twitter" xmlns="http://www.w3.org/2000/svg"
               xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="-12 -12 52 52"
               style="enable-background:new -12 -12 52 52;" xml:space="preserve">
               <path fill="#fff" d="M32,3.1c-1.2,0.5-2.4,0.9-3.8,1c1.4-0.8,2.4-2.1,2.9-3.6c-1.3,0.8-2.7,1.3-4.2,1.6C25.8,0.8,24,0,22.2,0
@@ -140,9 +138,8 @@
           </div>
 
           <div class="widget">
-            <?xml version="1.0" ?>
-            <!DOCTYPE svg PUBLIC '-//W3C//DTD SVG 1.1//EN' 'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'><svg
-              class="social-icon" enable-background="new 0 0 56.693 56.693" height="56.693px" id="Layer_1" version="1.1"
+          <svg
+              class="social-icon" enable-background="new 0 0 56.693 56.693" height="56.693px" id="facebook" version="1.1"
               viewBox="0 0 56.693 56.693" width="56.693px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
               xmlns:xlink="http://www.w3.org/1999/xlink">
               <path fill="#fff"
@@ -155,9 +152,7 @@
           </div>
 
           <div class="widget">
-            <?xml version="1.0" encoding="utf-8"?>
-            <!-- Generator: Adobe Illustrator 19.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-            <svg class="social-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+            <svg class="social-icon" version="1.1" id="googleplus" xmlns="http://www.w3.org/2000/svg"
               xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="-12 -12 52 52"
               style="enable-background:new 0 0 32 32;" xml:space="preserve">
               <path fill="#fff" d="M17.7,25.7c0-0.3,0-0.5-0.1-0.8c-0.1-0.2-0.1-0.5-0.2-0.7c-0.1-0.2-0.2-0.4-0.3-0.7c-0.2-0.2-0.3-0.4-0.4-0.6
@@ -341,7 +336,7 @@
 
 
 
-        <!--Toggle Switches-------->
+        <!--Toggle Switches-->
 
         <div class="settings-container">
           <h2 class="card-header">Settings</h2>
@@ -423,6 +418,6 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
       <script src="js/app.js"></script>
     </main>
+    </div>
 </body>
-
 </html>
